# INDM-modifed

./: .gitignore  CLAUDE.md  CodeStructure.md  PROTEIN_FID_IMPLEMENTATION.md  README.md  check_protein_sizes.py  create_dataset.py  create_protein_stats.py  dataset_processing_report.txt  datasets.py  debug_shapes.py  environment.yml  evaluation.py  likelihood.py  losses.py  pdb_dataset.py  plot_sample.py  plot_train_curve.py  pyproject.toml  requirements.txt  requirements_backup.txt  run_celeba_training.sh  run_cifar10_training.sh  run_custom_training_gpu67.sh  run_lib.py  run_protein_test.sh  run_protein_training.sh  run_protein_training_noflow_subvp.sh  run_protein_training_noflow_vpve.sh  run_sequence_evaluation.sh  run_sequence_training.sh  run_sequence_training_noflow.sh  run_sequence_training_odeflow.sh  run_sequence_training_pcflow.sh  run_with_cuda_fix.sh  sampling.py  sampling_lib.py  sde_lib.py  test_32x32_config.py  test_32x32_dataset.py  (+8 more)
checkpoints_cifar10/VE/: config.txt  evaluation_history.txt
cleanfid/: fid.py
configs/: default_cifar10_configs.py
configs/custom/PROTEIN/: indm_fid_ode_60k.py  indm_fid_ode_weighted_flow.py
configs/subvp/CELEBA/: indm_fid_ode.py  indm_fid_pc.py
configs/subvp/CIFAR10/: indm_fid_ode.py  indm_fid_pc.py
configs/subvp/PROTEIN/: indm_fid_ode.py  indm_fid_ode_noflow.py  indm_fid_pc.py  indm_fid_pc_noflow.py  indm_noflow_ode.py  indm_noflow_pc.py  indm_ode.py  indm_pc.py
configs/ve/CELEBA/: indm_fid_ode.py
configs/ve/CIFAR10/: indm_fid_ode.py  indm_fid_pc.py
configs/ve/PROTEIN/: indm_fid_ode.py  indm_fid_ode_noflow.py  indm_fid_pc.py  indm_fid_pc_noflow.py  indm_noflow_ode.py  indm_noflow_pc.py  indm_ode.py  indm_pc.py
configs/vp/CELEBA/: indm_fid_pc.py
configs/vp/CIFAR10/: indm_fid_ode.py  indm_fid_pc.py
configs/vp/PROTEIN/: indm_fid.py  indm_fid_ode.py  indm_fid_ode_noflow.py  indm_fid_pc.py  indm_fid_pc_noflow.py  indm_nll.py  indm_noflow_ode.py  indm_noflow_pc.py
flow_models/: flow_model.py
flow_models/wolf/: utils.py
flow_models/wolf/wolf_configs/protein/256x256/glow/: resflow-gaussian-uni.json
flow_models/wolf/wolf_configs/protein/32x32/glow/: resflow-gaussian-uni.json
flow_models/wolf/wolf_configs/protein/512x512/glow/: resflow-gaussian-uni.json
outputs/protein_fid/: config.txt  stdout.txt
protein_dataset/: __init__.py  protein_tfds.py
src/: debug_imports.py  evaluation.py  main.py  modern_metrics.py
src/flow_models/wolf/: utils.py
src/flow_models/wolf/flows/: activation.py  glow.py  normalization.py  permutation.py
src/flow_models/wolf/flows/couplings/: coupling.py
src/flow_models/wolf/modules/dequantization/: dequantizer.py
src/flow_models/wolf/modules/discriminators/priors/: flow.py  prior.py
src/flow_models/wolf/nnet/: attention.py  weight_norm.py
