[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "INDM"
version = "0.1.0"
description = "Replication of INDM non-linear latent diffusion"
authors = [
    {name = "Zexin Xue", email = "xzexin0121@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "overrides",
    "ml-collections",
    "tensorflow==2.15.0",
    "tensorflow-hub>=0.16.0",
    "tensorflow-datasets>=4.9.0",
    "tensorflow-probability>=0.23.0",
    "tensorboard",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchmetrics>=1.2.0",
    "pytorch-fid>=0.3.0",
    "absl-py",
    "ninja",
    "scipy",
    "natsort",
    "imageio",
    "numpy>=1.24.0,<2.0.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "h5py>=3.8.0",
    "wrapt>=1.14.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
